kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: laravel-app
        image: laravel-php:8.2
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
        - name: php
          containerPort: 9000
