kubernetes/queue-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-queue-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-queue-worker
  template:
    metadata:
      labels:
        app: laravel-queue-worker
    spec:
      containers:
      - name: laravel-queue-worker
        image: laravel-php:8.2
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh","-c"]
        args: ["composer install; php artisan queue:work database"]
        # command:
        #   - php
        # args:
        #   - artisan
        #   - queue:work
        #   - database
        #   - --tries=3 #Laravel default value for retry job
        #   # - --max-jobs=200
        resources: {}
