kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
  - name: app
    port: 9000
    targetPort: 9000
